src/CalendarTiles.scss
.ReactCalendarEvents {
  position: relative;
  padding-top: 1.5em;
  &:after {
    content: "";
    display: table;
    clear: both;
  }
  &__event {
    position: relative;
    float: left;
    display: block;
    box-sizing: border-box;
    z-index: 3;

    padding: 0.5em;
    margin: 0.1em 0;
    font-size: 0.8em;
    width: 100%;

    background: fade-out(#444, 0.2);
    color: #fff;

    &--start {
      border-top-left-radius: 1em;
      border-bottom-left-radius: 1em;
    }

    &--end {
      border-top-right-radius: 1em;
      border-bottom-right-radius: 1em;
    }
  }
}

.ReactCalendarTiles {
  $border-color: #ddd;
  max-width: 100%;
  width: 100%;
  height: 25rem;
  max-height: 100%;
  ul {
    list-style: none;
    padding: 0;
    margin: 0;
  }
  &__days {
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    li {
      width: 100%;
      font-size: 0.8em;
      padding: 0.3em;
      opacity: 0.7;
    }
  }
  &__tiles {
    height: 100%;

    &__row {
      position: relative;
      min-height: 20%;

      &:first-child {
        .ReactCalendarTiles__tile {
          &:first-of-type {
            border-top-left-radius: 0.25em;
          }
          &:last-of-type {
            border-top-right-radius: 0.25em;
          }
        }
      }
      &:last-child {
        .ReactCalendarTiles__tile {
          &:first-of-type {
            border-bottom-left-radius: 0.25em;
          }
          &:last-of-type {
            border-bottom-right-radius: 0.25em;
          }
        }
      }
    }
  }
  &__tile {
    position: absolute;
    z-index: 1;
    display: inline-block;
    box-sizing: border-box;
    padding: 0;
    margin: 0;
    transition: 200ms;
    background: white;
    // border: 1px solid $border-color;
    box-shadow: 0px 0px 0px 0.5px $border-color inset;
    vertical-align: top;

    top: 0;
    $tile-width: 14.285714286%;
    width: $tile-width;
    height: 100%;

    &:nth-child(6) {
      left: $tile-width * 1;
    }
    &:nth-child(5) {
      left: $tile-width * 2;
    }
    &:nth-child(4) {
      left: $tile-width * 3;
    }
    &:nth-child(3) {
      left: $tile-width * 4;
    }
    &:nth-child(2) {
      left: $tile-width * 5;
    }
    &:nth-child(1) {
      left: $tile-width * 6;
    }

    &__number {
      position: absolute;
      z-index: 2;
      padding: 0.5em;
      font-size: 0.8rem;
    }
    &--offmonth {
      .ReactCalendarTiles__tile__number {
        opacity: 0.5;
      }
    }
    &--faded {
      opacity: 0.2;
    }
    &--selected {
      animation: pop 0.3s;
      z-index: 2;
      &:before {
        position: absolute;
        content: " ";
        width: 100%;
        height: 100%;
        box-shadow: 0 3px 3px rgba(0, 0, 0, 0.1);
        z-index: -1;
      }
    }
  }

  &--isSelecting {
    .ReactCalendarEvents__event {
      opacity: 0.2;
    }
  }
}

@keyframes pop {
  0% {
    transform: scale(1);
  }
  50% {
    transform: scale(1.1);
  }
  100% {
    transform: scale(1);
  }
}

